<resources>

    <!-- Generic Strings -->
    <string name="app_name">visualizAR</string>
    <string name="action_settings">Settings</string>
    <!-- Generic Strings -->

    <!-- Strings used for Login Page -->
    <string name="username_placeholder_text">Ingresá tu usuario</string>
    <string name="password_placeholder_text">Ingresá tu contraseña</string>
    <string name="login_btn_text">  Ingresar  </string>
    <string name="login_logo_content_description">Visualizar logo in login action</string>
    <!-- Strings used for Login Page -->

    <!--Inicio Fragment administrador de indicadores -->
    <string name="indicators_admin_title">Administrador de Indicadores</string>
    <string name="indicators_admin_btn_edit">Editar</string>
    <string name="indicators_admin_view_more">Ver más</string>
    <string name="indicators_admin_actual_value">Valor Actual</string>
    <string name="indicators_admin_btn_update_value">Actualizar Actual</string>
    <string name="indicators_admin_last_update">Última Modificación</string>
    <string name="confirm_delete">Estás por borrar un indicador. ¿Seguro?</string>
    <string name="error_delete">Ocurrió un error. Intentá nuevamente más tarde</string>
    <string name="generic_error">Ocurrió un error. Intentá nuevamente más tarde</string>
    <string name="view_details_page_title">Detalle de Indicador</string>
    <!--Fin Fragment administrador de indicadores -->

    <!--Inicio Fragment administrador de indicadores -->
    <string name="indicators_update_title">Actualizar Valor del Indicador</string>
    <string name="indicators_update_new_value">NUEVO VALOR</string>
    <string name="indicators_update_actual_value">Valor Actual</string>
    <string name="indicators_update_btn_update_value">Actualizar Valor</string>
    <string name="indicators_update_cal">FORMULA DE CALCULO</string>
    <!--Fin Fragment administrador de indicadores -->

    <!--Inicio Fragment  indicador_alta -->
    <string name="formAlta">Nuevo Indicador</string>
    <string name="existentId">El ID ya existe</string>
    <string name="checkID">¿Existe el ID?</string>
    <string name="ID">(OBLIGATORIO) El ID asociado al indicador.</string>
    <string name="organization">(OBLIGATORIO) Organización asociada al indicador.</string>
    <string name="titulo">Título del indicador</string>
    <string name="localidad">Localidad asociada al indicador.</string>
    <string name="pais">Pais asociado a la localidad.</string>
    <string name="calculoDesde">Fecha desde que comienza a calcularse el indicador.</string>
    <string name="calculoHasta">Fecha hasta la que se calculará el indicador.</string>
    <string name="proximaFechaCalculo">Próxima fecha de cálculo del indicador.</string>
    <string name="proveedor">Proveedor asociado al indicador.</string>
    <string name="nombre">(OBLIGATORIO) Nombre del indicador.</string>
    <string name="valor">(OBLIGATORIO) Valor del indicador.</string>
    <string name="fuente">Fuente asociada al indicador.</string>
    <string name="producto">Producto asociado al indicador.</string>
    <string name="objetivoComercial">Objetivo comercial de la medición.</string>
    <string name="descripcion">Descripción del indicador.</string>
    <string name="calculationFormula">La fórmula usada para calcular el indicador.</string>
    <string name="fechaExpiracion">Fecha de expiración del indicador.</string>
    <string name="area">Area asociada al indicador.</string>
    <string name="Altacheck1_text">CalculationMethod : The calculation method used.</string>
    <string name="Editcheck1_text">Method : </string>
    <string name="AltaSource">Source : A sequence of characters giving the source of the entity data.</string>
    <string name="AltaTarget">BusinessTarget : For informative purposes, the business target to which this KPI is related to.</string>
    <string name="AltaDateNextCalc">DateNextCalculation : Date on which a new calculation of the KPI should be available.</string>
    <string name="AltaArea">Area : For organizational purposes, it allows to add extra textual geographical information such as district, burough, or any other hint which can help to identify the KPI coverage.</string>
    <string name="EditFormula">Fórmula :</string>
    <string name="txtcalculationFrequency">Frecuencia :</string>
    <string name="txtValue">Valor</string>
    <string name="txtCategory">Categoria :</string>
    <string name="txtCalculationMethod">Método :</string>
    <string name="txtOpcionales">Opcionales</string>
    <string name="EditTarget">Target : </string>
    <string name="EditDateNextCalc">Next Calc : </string>
    <string name="EditArea">Area : </string>
    <string name="EditSource">Source : </string>
    <!--Fin Fragment  indicador_alta -->

    <!--Inicio Fragment  editar_indicador y alta_indicador-->
    <string name="formEditar">Editar Indicador</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="editId">ID</string>
    <string name="editOrganization">Organización</string>
    <string name="editDescription">Descripción</string>
    <string name="editLocality">Localidad</string>
    <string name="editCountry">País</string>
    <string name="calculationPeriodFrom">Periodo de Cálculo Desde</string>
    <string name="calculationPeriodTo">Periodo de Cálculo Hasta</string>
    <string name="nextCalculationDate">Próxima Fecha de Cálculo</string>
    <string name="editProvider">Proveedor</string>
    <string name="editName">Nombre</string>
    <string name="editSource">Fuente</string>
    <string name="editProduct">Producto</string>
    <string name="editBusinessTarget">Objetivo Comercial</string>
    <string name="editCalculationMethod">Fórmula de Cálculo</string>
    <string name="editExpirationDate">Fecha de Expiración</string>
    <string name="editArea">Area</string>
    <string name="editStatus">Estado:</string>
    <!--Fin Fragment  editar_indicador y alta_indicador-->

    <!--Inicio validation messages-->
    <string name="completeInput">Por favor, completá el campo</string>
    <string name="invalidEqualChar">El campo no puede contener =</string>
    <string name="invalidDate">El formato debe ser AAAA-MM-DD</string>
    <string name="existentKpiId">El ID ya existe</string>
    <string name="validId">ID válido</string>
    <string name="pleaseEnterId">Por favor, ingresá el ID</string>
    <!--Fin Fragment validation messages-->

</resources>