<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutActualizar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ort.visualizar.ActualizarValorFragment">


    <TextView
        android:id="@+id/textViewUpdateIndicadorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators_update_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOMBRE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewUpdateIndicadorValorActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateIndicadorTitle"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorValorActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators_update_actual_value"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorValorActualValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="76%"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateIndicadorValorActual" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorNewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators_update_new_value"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/editTextUpdateIndicadorNewValueInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateIndicadorNewValue" />

    <Button
        android:id="@+id/buttonUpdateIndicadorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators_update_btn_update_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewUpdateIndicadorFormulaCalculoTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateIndicadorNewValueInput"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorFormulaCalculoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators_update_cal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateIndicadorNewValueInput"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/textViewUpdateIndicadorFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x = a / (a+b)"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateIndicadorFormulaCalculoTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>